--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -11,10 +11,13 @@
                 <img height="38" loading="lazy" alt="Parclick" class="ng-lazyloaded" src="https://static.parclick.com/assets/img/logotipo-parclick.svg"><nav>
                     <ul>
                         <a th:href="@{/}">Inicio</a>
-                        <a href="#">Acerca de nosotros</a>
-                        <a href="#">Contacto</a>
+                        <a href="@{/usuario/acerca}">Acerca de nosotros</a>
+                        <a th:href="@{/contacto}">Contacto</a>
                         <a th:href="@{/usuario/inicio}">Inicio sesión</a>
+                        
                     </ul>
+                        
+                       
                 </nav>
                 <div/>
         </header>  
