--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -12,7 +12,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* --------------- NAVEGATION --------------- */
 .nav-bar-main {
+    position: relative;
+    z-index: 100;
     font-size: 20px;
     display: flex;
     flex-wrap: center;
@@ -39,6 +42,11 @@
     color: var(--orange-color);
 }
 
+nav {
+    text-align: center;
+}
+
+/* --------------- BANNER --------------- */
 .banner {
     padding: 50px;
     text-align: center;
@@ -60,6 +68,7 @@
     background-color: var(--orange-color);
 }
 
+/* --------------- LOGIN --------------- */
 .reg-container {
     width: 400px;
     position: absolute;
@@ -135,81 +144,72 @@
     justify-content: center;
     align-items: center;
 }
-.cent_title{
-    padding: 50px;
-    text-align: center;
+
+/* --------------- VIDEO BANNER --------------- */
+video {
+    width: 100%;
+    pointer-events: none;
 }
 
-.cent_title b{
-    font-size: larger;
-}
-.cent_subtitle{
+.video-banner {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    position: absolute;
     text-align: center;
-}
-.cent_img{
     display: flex;
-    padding: 10px;
-    align-content: center;
-    flex-wrap: wrap;
+    text-align: center;
     justify-content: center;
-}
-.cent_img button {
-    margin-right:40px;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-
-}
-.images {
-    display: inline-block;
-    padding: 0 25px;
-    height: 0px;
-    font-size: 16px;
-    margin-left: 60px;
-    line-height: 50px;
-    border-radius: 25px;
-    background-color: #f1f1f1;
-}
-
-.images img {
-    float: left;
-    width: 500px;
-    height: 350px;
-    border-radius: 30%;
-
-}
-.cent_contact{
-    font-size: larger;
-    padding: 60px;
-    text-align: center;
-}
-.cent_contact a{
-    border-radius: 50px;
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    box-shadow: 0px 10px 68px 19px rgba(0,0,0,0.1);
-    background-color: var(--orange-color);
-}
-.mapsme{
-    display: flex;
     align-items: center;
-    justify-content: center;
-}
-.maps1{
-    flex-basis: 40%;
-    padding-left: 500px;
-    
-}
-.maps_text{
-    display: flow;
-    font-size: 20px;
-    padding-right: 50px;
-    padding-left: 400px;
+    color: white;
 }
 
+.video-banner-seach-title {
+    width: 50%;
+    text-align: left;
+    padding: 10px;
+}
 
+.video-banner-seach-title h2, p, input {
+    padding-bottom: 10px;
+}
+
+.video-banner-seach-title p {
+    font-size: 17px;
+    color: var(--gray-color);
+}
+
+.video-banner-seach-title input {
+    padding: 10px 10px 10px 5px;
+    border-color: transparent;
+    border-radius: .8rem;
+    outline: none;
+    width: 80%;
+    font-size: 16px;
+    background: white;
+}
+
+.video-banner-seach-title button {
+    padding: 10px 10px 10px 5px;
+    border-color: transparent;
+    border-radius: 1rem;
+    outline: none;
+    width: 18%;
+    font-size: 16px;
+    background: var(--orange-color);
+    color: white;
+    font-weight: bold;
+}
+
+/* z-index: 100; */
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: rgba(0,0,0,0.375);
+}
 
 /* ------------------------------------------------------------------------- */
 .nav {
